cluster/apps/default/gitea/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: default
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
        - name: gitea
          image: gitea/gitea:1.25.5
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
              name: http
          resources:
            limits:
              cpu: "100m"
              memory: "256Mi"
            requests:
              cpu: "100m"
              memory: "256Mi"
          volumeMounts:
            - mountPath: /data/
              name: gitea-storage-volume
      volumes:
        - name: gitea-storage-volume
          persistentVolumeClaim:
            claimName: gitea-storage
