cluster/apps/default/gitea/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-service
  namespace: default
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: http
  selector:
    app: gitea
