cluster/apps/default/gitea/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-ingress
  namespace: default
spec:
  ingressClassName: internal
  rules:
    - host: git.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: gitea-service
                port:
                  number: 3000
            path: /
            pathType: Prefix
      tls:
        - hosts:
            - git.${SECRET_DOMAIN}
          secretName: gitea-tls
